--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -56,12 +56,7 @@ img {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
-}
-
-.topnav a.active {
-  background-color: #ff0000;
-  color: #ffffff;
-  border-radius: 15px;
+  text-decoration: underline;
 }
 
 .topnav .icon {
@@ -86,7 +81,10 @@ img {
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
+    text-align: right;
+  }
+  .topnav.responsive .active{
+    margin-top: 70px;
   }
 }
 
@@ -97,8 +95,20 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
   }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+  }
+  #myTopnav.responsive {
+    display: block;
+
+  }
+  .topnav.responsive .active{
+    margin-top: 0px;
+  }
+  
 } 
 
 main {
@@ -549,6 +559,7 @@ footer {
   }
   .topnav a.active {
     border-radius: 15px;
+    
   }
   .topnav.responsive {
     display: flex;
